# FirstOfComputerEngineering

./: README.md  template_to_make_a_CMakeList.txt_file
AED/prac_1_Clase_numero_racional/: main_rational_t.cpp  rational_t.cpp  rational_t.hpp
AED/prac_2_Vectores_y_matrices_de_doubles/: main_p2  main_p2.cpp  matrix_t.hpp  rational_t.cpp  rational_t.hpp  vector_t.hpp
AED/prac_3_Polinomios_con_vectores_dispersos/: data_polynomial.txt  main_polynomial.cc  polynomial.h  sparse_vector_t.h  vector_t.h
AED/prac_4_polinomios_implementados_con_listas_enlazadas/: main_sllpolynomial  main_sllpolynomial.cc  pair_t.h  sll_node_t.h  sll_t.h  sllpolynomial.h  vector_t.h
AED/prac_5_Evaluacion_de_expresiones_RPN/: dll_node_t.h  dll_t.h  main_rpn_t  main_rpn_t.cc  queue_l_t.h  rpn_t.h  stack_l_t.h
AED/prac_6_el_problema_del_laberinto_recursividad/: main_maze_t  main_maze_t.cpp  matrix_t.hpp  maze_t.cpp  maze_t.hpp  pair_t.h  vector_t.hpp
IB/IB-class-code-examples/: IB-class-code-examples.txt
IB/prac_02_Linuxcommands/: ProgrammingJoke.txt  history.txt
IB/prac_02_Linuxcommands/EjerciciosComandosLinux/: taxonomy
IB/prac_04_Programmes/: 7ºEj-AreayVolumenCono  AdivinoTuEdad  AdivinoTuEdad.cc  AreaYPerimetroCuadrado.cc  AreaYPerimetroDelCuadrado  AñoDeJubilacion  CalculaPrecios.cc  CalculadoraDinero  CalculadoraDinero.cc  CalculadoraYenesEuros  CalculadoraYenesEuros.cc  Calculator  CosteCarreteras  CostePorMetro.cc  Cross  Distancia2PuntosEnEspacio  Distancia2PuntosEnEspacio.cc  Input  Jubilacion.cc  MediaAritmeticaIB  MediaIB.cc  Millas.cc  MillasAMetros  Multiplicacion  Multiplicacion.cc  SaludoConEdad  SaludoConEdad.cc  SimulacroPractica  TamañoVariables  TamañoVariables.cc  calculator.cc  cross.cc  saludo  saludo.cc  the_input.cc  the_output  the_output.cc
IB/prac_05_Typedata_references_commandmake/: Makefile  arithmetic_operators  arithmetic_operators.cc  boolean_operators  boolean_operators.cc  data_types  data_types.cc  references  references.cc
IB/prac_06_Sentences_in_C++/: collatz  collatz.cc  dividers  dividers.cc  longest_shortest  longest_shortest.cc  practica_6_ib_cristopherafonsomora_ejercicio_centro_calculo  practica_6_ib_cristopherafonsomora_ejercicio_centro_calculo.cc  statistics  statistics.cc
IB/prac_07_Functions/exercise1/: functions1.cc  functions1.h  makefile  primes  primes.cc
IB/prac_07_Functions/exercise2/: functions2.cc  functions2.h  makefile  palindrome  (+1 more)
IB/prac_10_Doxygen/: cripto  cripto.cc  functions_cripto.cc  functions_cripto.h  makefile
IB/prac_11_CMake/complejos_ejercicio_2/: CMakeLists.txt
IB/prac_11_CMake/ejercicio_hecho_en_el_CC/: CMakeLists.txt
IB/prac_11_CMake/ejercicio_hecho_en_el_CC/src/: fechas.cc  fechas.h  functions_fechas.cc
IB/prac_11_CMake/racionales_ejercicio_3/: CMakeLists.txt
IB/prac_11_CMake/racionales_ejercicio_3/src/: functions_racionales.cc  racionales.cc  racionales.h
Opt/ProgramaEjecutableYGrafosDePrueba/: grafoprueba3.gr  grafopruebaprac4.gr
Opt/prac3y4_ClaseGRAFO/: GRAFO  grafo.cpp  grafo.h  main.cpp
PC/prac1_QtSpim_y_Repres_Info/: ejemplo_practica1.s  practica1.s
PC/prac2_Enteros_MIPS32/: Practica 2 - Fichero para hacerla(Plantilla).s  Practica2_CristopherManuelAfonsoMora.s  Práctica2_CódigoEnC++.cc
PC/prac3_Doubles_MIPS32/: Practica3_CodigoEnC++.cc  Practica3_version1_CristopherManuelAfonsoMora.s  Practica3_versionfinal_CristopherManuelAfonsoMora.s
PC/prac5_Matrices_SubProgramas_MIPS32/: CodigoPractica5APC.cc  CodigoPractica5BPC.cc  Practica 5B - Cristopher Afonso y Rebeca Rodriguez(Windows).s  Practica 5B - Cristopher Afonso y Rebeca Rodriguez(ubuntu).s  Practica5A_PC_CristopherManuelAfonsoMora.s  Practica5A_PC_FuncionExtraMal_CristopherManuelAfonsoMora.s
(+70 files in other folders)
